...
                            Label("Non lu", systemImage: "cicle.fill")
                        } else {
                            Label("Lu", systemImage: "text.bubble")
                        }
                    }
                    .tint(.blue)
                    .accessibility(identifier: "readLastMessage")
                }
            }
        }
        .listStyle(PlainListStyle())
        .searchable(text: $query)
        .navigationBarTitle("Conversations")
        .navigationBarItems(trailing: Button(action: {
            print("Add room")
        }, label: {
            Image(systemName: "square.and.pencil")
        }))
        .accessibility(identifier: "chatsList")
    }
}

struct ChatRow: View {
    let chat: Chat
    
...
